--- a/index.html
+++ b/index.html
@@ -5,56 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Island Snow</title>
 
-  <!-- Bootstrap 5 CSS -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Navbar -->
+  <!-- TOP NAVBAR -->
   <nav class="navbar navbar-light bg-light">
     <div class="container d-flex justify-content-between align-items-center w-100">
-  
-      <!-- Social icons -->
+      <!-- Social Icons -->
       <ul class="nav">
-        <li class="nav-item p-1">
-          <a class="nav-link text-black" href="#"><i class="bi bi-facebook"></i></a>
-        </li>
-        <li class="nav-item p-1">
-          <a class="nav-link text-black" href="#"><i class="bi bi-twitter"></i></a>
-        </li>
-        <li class="nav-item p-1">
-          <a class="nav-link text-black" href="#"><i class="bi bi-pinterest"></i></a>
-        </li>
-        <li class="nav-item p-1">
-          <a class="nav-link text-black" href="#"><i class="bi bi-instagram"></i></a>
-        </li>
+        <li class="nav-item p-1"><a class="nav-link text-black" href="#"><i class="bi bi-facebook"></i></a></li>
+        <li class="nav-item p-1"><a class="nav-link text-black" href="#"><i class="bi bi-twitter"></i></a></li>
+        <li class="nav-item p-1"><a class="nav-link text-black" href="#"><i class="bi bi-pinterest"></i></a></li>
+        <li class="nav-item p-1"><a class="nav-link text-black" href="#"><i class="bi bi-instagram"></i></a></li>
       </ul>
-  
-      <!-- Right menu icons -->
+
+      <!-- Cart/Menu Icons -->
       <ul class="nav justify-content-end">
-        <li class="nav-item p-1">
-          <a class="nav-link text-black" href="#"><i class="bi bi-house"></i></a>
-        </li>
-        <li class="nav-item p-1">
-          <a class="nav-link text-black" href="#"><i class="bi bi-person"></i></a>
-        </li>
+        <li class="nav-item p-1"><a class="nav-link text-black" href="#"><i class="bi bi-house"></i></a></li>
+        <li class="nav-item p-1"><a class="nav-link text-black" href="#"><i class="bi bi-person"></i></a></li>
         <li class="nav-item dropdown p-1">
-          <a class="nav-link dropdown-toggle text-black" href="#" id="cartDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-black" href="#" id="cartDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-cart"></i> 0
           </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="cartDropdown">
+          <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">View Cart</a></li>
             <li><a class="dropdown-item" href="#">Checkout</a></li>
           </ul>
         </li>
       </ul>
-  
     </div>
   </nav>
-  
+
+  <!-- LOGO -->
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="images/islandsnowlogo.png" class="img-fluid rounded mx-auto d-block py-1" alt="Island Snow Logo">
+      </div>
+    </div>
+  </div>
+
+  <!-- SECOND MENU -->
+  <div class="container">
+    <div class="row justify-content-center pt-4">
+      <div class="col-auto fw-bold">MEN ▼</div>
+      <div class="col-auto fw-bold">WOMEN ▼</div>
+      <div class="col-auto fw-bold">KIDS ▼</div>
+      <div class="col-auto fw-bold">BRANDS ▼</div>
+      <div class="col-auto fw-bold">SEARCH</div>
+    </div>
+  </div>
+
+  <!-- FULL-WIDTH BRIDGE IMAGE -->
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-12">
+        <img src="images/modelonbridge.png" class="img-fluid" alt="Model sitting on bridge">
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
