--- a/index.html
+++ b/index.html
@@ -73,3 +73,41 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+<!-- FOOTER -->
+<footer style="background-color: #292929; color: white;">
+  <div class="container py-4">
+    <div class="row">
+
+      <!-- Navigation Column -->
+      <div class="col-md-4">
+        <h5 class="text-uppercase">Navigation</h5>
+        <hr class="border-light">
+        <p>About Us</p>
+        <p>Employment</p>
+        <p>Videos</p>
+      </div>
+
+      <!-- Main Menu Column -->
+      <div class="col-md-4">
+        <h5 class="text-uppercase">Main Menu</h5>
+        <hr class="border-light">
+        <p>Men</p>
+        <p>Women</p>
+        <p>Kids</p>
+      </div>
+
+      <!-- Connect Column -->
+      <div class="col-md-4">
+        <h5 class="text-uppercase">Connect</h5>
+        <hr class="border-light">
+        <p>Sign up for the latest updates</p>
+        <div class="d-flex">
+          <input type="text" class="form-control me-2" placeholder="Enter Email Address">
+          <button class="btn btn-dark">Join</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</footer>
